# Cavi-ERP

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
agents/: __init__.py
agents/base/: __init__.py  agent.py  contract.py  registry.py  runtime.py
agents/beacon/: __init__.py  agent.py  beacon.py  report.py  report_agent.py
agents/forge/: __init__.py  agent.py  forge.py  write.py  write_agent.py
agents/ledger/: __init__.py  agent.py  ledger.py  query.py  query_agent.py
agents/mapper/: __init__.py  agent.py  erp.py  erp_agent.py  mapper.py  transforms.py
agents/ticker/: __init__.py  agent.py  ticker.py  webhook.py  webhook_agent.py
agents/vault/: __init__.py  (+3 more)
docs/: ARCHITECTURE.md  DISASTER_RECOVERY.md  INCIDENT_RESPONSE.md  OPERATIONS.md  README.md  SECURITY.md
schema_registry/: README.md
scripts/: bootstrap.py  migrate.py
shared/: __init__.py  auth.py  cache.py  db.py  events.py  health.py  logging.py  metrics.py  settings.py
tests/: test_auth.py  test_base_agent.py  test_base_agent_streams.py  test_beacon.py  test_beacon_dedup.py  test_beacon_delivery.py  test_beacon_report.py  test_contract.py  test_forge.py  test_forge_write.py  test_ledger.py  test_ledger_idempotency.py  test_ledger_query.py  test_ledger_tenant.py  test_mapper.py  test_mapper_erp.py  test_migrate.py  test_observability.py  test_schema_registry.py  test_ticker.py  test_ticker_webhook.py  test_vault.py  test_vault_agent.py  test_vault_service.py
(+33 files in other folders)
