# Cavi ERP — tooling configuration.
#
# Dependency declarations stay in requirements.txt for now (the Dockerfile
# installs from it); consolidating them into [project.dependencies] plus a
# hashed lockfile is part of the packaging milestone. This file configures the
# lint / type / test gates that CI (.github/workflows/ci.yml) enforces.

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Start on ruff's default rule set (pyflakes + a curated pycodestyle subset) so
# the tree is green today; ratchet additional rule groups on over time.
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.11"
files = ["agents", "shared", "scripts"]
# Third-party libs (redis, psycopg, keyring, jsonschema) ship without stubs in
# this project; don't fail on their missing imports. Everything we author is
# still type-checked, including the bodies of untyped functions.
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
